[metadata]
name = sila_cetoni_pumps
version = 1.0.0
author = CETONI GmbH
author_email = info@cetoni.de
description = SiLA 2 implementations for CETONI Pump devices
long_description_content_type = text/markdown
url = https://cetoni.de/cobomation/#sila
project_urls =
    SiLA Standard = https://sila-standard.org
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = .
packages = find_namespace:
python_requires = >=3.7
install_requires =
    black
    # cetoni-sdk
    coloredlogs
    isort
    sila2
include_package_data = True

[options.package_data]
* =
    *.sila.xml

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    sila-cetoni-pumps = sila_cetoni_pumps:main
